src/test/ui/type-inference/unbounded-type-param-in-fn-with-assoc-type.stderr
error: defaults for type parameters are only allowed in `struct`, `enum`, `type`, or `trait` definitions.
  --> $DIR/unbounded-type-param-in-fn-with-assoc-type.rs:3:11
   |
LL | fn foo<T, U = u64>() -> (T, U) {
   |           ^

error: aborting due to previous error

